force-app/main/default/objects/HelpedPageLayout__c/HelpedPageLayout__c.object-meta.xml
<CustomObject>
    <description>A Salesforce page that has been enabled with Improved Help</description>
    <label>Helped Page Layout</label>
    <nameField>
        <label>Helped Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helped Page Layouts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>