force-app/main/default/objects/HelpedPageLayout__c/fields/AllowComments__c.field-meta.xml
<CustomField>
    <fullName>AllowComments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Un-check this box to prevent users from logging comments about this Layout</description>
    <inlineHelpText>Un-check this box to prevent users from logging comments about this Layout</inlineHelpText>
    <label>Allow Comments?</label>
    <type>Checkbox</type>
</CustomField>