force-app/main/default/objects/HelpedPageLayout__c/fields/PageLayoutIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PageLayoutIdentifier__c</fullName>
    <description>For Object-based Helped Page Layouts, the three letter unique identifier for the SalesForce object that &apos;owns&apos; this Page Layout</description>
    <inlineHelpText>For Object-based Helped Page Layouts, the three letter unique identifier for the SalesForce object that &apos;owns&apos; this Page Layout</inlineHelpText>
    <label>Page Layout Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>