force-app/main/default/objects/HelpedPageLayout__c/fields/PageType__c.field-meta.xml
<CustomField>
    <fullName>PageType__c</fullName>
    <description>The technology used to develop and deliver this Helped Page Layout</description>
    <inlineHelpText>The technology used to develop and deliver this Helped Page Layout</inlineHelpText>
    <label>Page Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Visual Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>