force-app/main/default/objects/HelpedPageLayout__c/fields/RehookInterval__c.field-meta.xml
<CustomField>
    <fullName>RehookInterval__c</fullName>
    <defaultValue>1500</defaultValue>
    <description>Where re-hooking is required, the interval in milliseconds between hooking attempts.</description>
    <inlineHelpText>Where re-hooking is required, the interval in milliseconds between hooking attempts.</inlineHelpText>
    <label>Re-hook Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>