force-app/main/default/objects/HelpedPageLayout__c/fields/RehookTimes__c.field-meta.xml
<CustomField>
    <fullName>RehookTimes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For very complex layouts, the number of times to attempt re-hooking. 0 = do not rehook. -1 = re-hook continually.</description>
    <inlineHelpText>For very complex layouts, the number of times to attempt re-hooking. 0 = do not rehook. -1 = re-hook continually.</inlineHelpText>
    <label>Re-hook Times</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>