force-app/main/default/objects/HelpedPageLayout__c/listViews/AllHelpedPageLayouts.listView-meta.xml
<ListView>
    <fullName>AllHelpedPageLayouts</fullName>
    <columns>NAME</columns>
    <columns>PageLayoutIdentifier__c</columns>
    <columns>PageType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>AllowComments__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Helped Page Layouts</label>
</ListView>