force-app/main/default/objects/HelpedPageLayout__c/listViews/AllMyHelpedPageLayouts.listView-meta.xml
<ListView>
    <fullName>AllMyHelpedPageLayouts</fullName>
    <columns>NAME</columns>
    <columns>PageLayoutIdentifier__c</columns>
    <columns>PageType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>AllowComments__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Helped Page Layouts</label>
</ListView>